--- a/tests/SvgBlazor.Tests/SvgBlazor.Tests.csproj
+++ b/tests/SvgBlazor.Tests/SvgBlazor.Tests.csproj
@@ -17,9 +17,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="bunit" Version="1.2.49" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\SvgBlazor\SvgBlazor.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Components\" />
+    <None Remove="bunit" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Elements\" />
   </ItemGroup>
 </Project>
