--- a/src/SvgBlazor.Docs.Generator/SvgBlazor.Docs.Generator.csproj
+++ b/src/SvgBlazor.Docs.Generator/SvgBlazor.Docs.Generator.csproj
@@ -4,5 +4,10 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
