--- a/src/SvgBlazor.Docs.Generator/SvgBlazor.Docs.Generator.csproj
+++ b/src/SvgBlazor.Docs.Generator/SvgBlazor.Docs.Generator.csproj
@@ -5,9 +5,7 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
+    <PackageReference Include="ColorCode.HTML" Version="2.0.10" />
   </ItemGroup>
 </Project>
