--- a/src/SvgBlazor.Docs.Generator/SvgBlazor.Docs.Generator.csproj
+++ b/src/SvgBlazor.Docs.Generator/SvgBlazor.Docs.Generator.csproj
@@ -4,5 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
+    <PackageReference Include="ColorCode.HTML" Version="2.0.10" />
+  </ItemGroup>
 </Project>
