Source code component

--- a/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
+++ b/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
@@ -4,6 +4,31 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <BinDocsCompiler>$(SolutionDir)/src/SvgBlazor.Docs.Generator/bin/Debug/net5.0/SvgBlazor.Docs.Generator.dll</BinDocsCompiler>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <ProjectDocsCompiler>dotnet run --configuration release --project "$(SolutionDir)src/SvgBlazor.Docs.Generator/SvgBlazor.Docs.Generator.csproj"</ProjectDocsCompiler>
+  </PropertyGroup>
+
+  <Target Name="CompileDocs" BeforeTargets="BeforeBuild">
+    <Message Text="Generating docs..." Importance="high" />
+    <Exec Command="dotnet &quot;$(BinDocsCompiler)&quot;" Condition="Exists('$(BinDocsCompiler)')" />
+    <Exec Command="$(ProjectDocsCompiler)" Condition="!Exists('$(BinDocsCompiler)')" />
+  </Target>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Pages\**\*.html" />
+  </ItemGroup>
+
+  <Target Name="CleanGeneratedDocsFiles" BeforeTargets="Clean">
+    <ItemGroup>
+      <FilesToClean Include="./Pages/**/*.html" />
+    </ItemGroup>
+    <Delete Files="@(FilesToClean)" />
+  </Target>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.9" PrivateAssets="all" />
