Source code component (#94)

--- a/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
+++ b/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
@@ -4,6 +4,29 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <SolutionDir Condition="'$(SolutionDir)' == ''">$(MSBuildThisFileDirectory)../../</SolutionDir>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <BinDocsCompiler>$(SolutionDir)src/SvgBlazor.Docs.Generator/bin/$(Configuration)/net5.0/SvgBlazor.Docs.Generator.dll</BinDocsCompiler>
+  </PropertyGroup>
+	
+  <Target Name="GenerateDocs" BeforeTargets="BeforeBuild">
+    <Message Text="Generating docs..." Importance="high" />
+    <Exec Command="dotnet &quot;$(BinDocsCompiler)&quot; $(SolutionDir)"/>
+	<ItemGroup>
+	  <EmbeddedResource Include="Pages\**\*.html" Exclude="@(EmbeddedResource)" />
+	</ItemGroup>
+  </Target>
+
+  <Target Name="CleanGeneratedDocsFiles" BeforeTargets="Clean">
+    <ItemGroup>
+      <FilesToClean Include="./Pages/**/*.html" />
+    </ItemGroup>
+    <Delete Files="@(FilesToClean)" />
+  </Target>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.9" PrivateAssets="all" />
