--- a/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
+++ b/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
@@ -10,6 +10,7 @@
 
   <PropertyGroup>
     <BinDocsCompiler>$(SolutionDir)src/SvgBlazor.Docs.Generator/bin/$(Configuration)/net5.0/SvgBlazor.Docs.Generator.dll</BinDocsCompiler>
+    <XmlDocumentation>$(SolutionDir)src/SvgBlazor/obj/$(Configuration)/net5.0/SvgBlazor.xml</XmlDocumentation>
   </PropertyGroup>
 	
   <Target Name="GenerateDocs" BeforeTargets="BeforeBuild">
@@ -26,6 +27,10 @@
     </ItemGroup>
     <Delete Files="@(FilesToClean)" />
   </Target>
+
+  <ItemGroup>
+    <EmbeddedResource Include="$(XmlDocumentation)" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9" />
