--- a/src/SvgBlazor/SvgBlazor.csproj
+++ b/src/SvgBlazor/SvgBlazor.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
   
   <ItemGroup>
     <SupportedPlatform Include="browser" />
