--- a/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
+++ b/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
@@ -15,9 +15,10 @@
 	
   <Target Name="GenerateDocs" BeforeTargets="BeforeBuild">
     <Message Text="Generating docs..." Importance="high" />
-    <Exec Command="dotnet &quot;$(BinDocsCompiler)&quot; $(SolutionDir)"/>
+    <Exec Command="dotnet &quot;$(BinDocsCompiler)&quot; $(SolutionDir)" />
 	<ItemGroup>
 	  <EmbeddedResource Include="Pages\**\*.html" Exclude="@(EmbeddedResource)" />
+	  <EmbeddedResource Include="$(XmlDocumentation)" />
 	</ItemGroup>
   </Target>
 
@@ -27,10 +28,6 @@
     </ItemGroup>
     <Delete Files="@(FilesToClean)" />
   </Target>
-
-  <ItemGroup>
-    <EmbeddedResource Include="$(XmlDocumentation)" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.9" />
@@ -44,6 +41,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SvgBlazor\SvgBlazor.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+    <ProjectReference Include="..\SvgBlazor.Docs.Generator\SvgBlazor.Docs.Generator.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
   </ItemGroup>
