Provide a common way of docs code generation and styling

--- a/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
+++ b/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
@@ -52,5 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Markdig.Signed" />
+    <None Remove="Highlight.js" />
+  </ItemGroup>
   </ItemGroup>
 </Project>
