--- a/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
+++ b/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
@@ -52,5 +52,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="Markdig.Signed" />
+    <None Remove="Highlight.js" />
   </ItemGroup>
 </Project>
