--- a/src/SvgBlazor.Docs.Generator/SvgBlazor.Docs.Generator.csproj
+++ b/src/SvgBlazor.Docs.Generator/SvgBlazor.Docs.Generator.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <AdditionalFiles Include="../../.stylecop.json" Link=".stylecop.json" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" />
   </ItemGroup>
 </Project>
