--- a/src/SvgBlazor/SvgBlazor.csproj
+++ b/src/SvgBlazor/SvgBlazor.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="../../.stylecop.json" Link=".stylecop.json" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
