--- a/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
+++ b/src/SvgBlazor.Docs/SvgBlazor.Docs.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <AdditionalFiles Include="../../.stylecop.json" Link=".stylecop.json" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.1" PrivateAssets="all" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
